[package]
name = "iota-core"
version = "0.2.0-alpha.3"
authors = ["YuWeiWu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Core library of IOTA"
license = "Apache-2.0"

[lib]
name = "iota"

[dependencies]
bee-transaction = { git = "https://github.com/Alex6323/bee-p.git" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev", rev = "a9da28d", features = ["serde1"] }
bee-signing = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
iota-client = { version = "0.5.0-alpha", path = "../iota-client" }

#[features]
#quorum = ["iota-client/quorum"]
#wasm = ["iota-client/wasm"]